<resources>
    <string name="app_name">StudentTranslator</string>
    <string name="error_textview_stub">Error</string>
    <string name="reload_button">Reload</string>
    <string name="undefined_error">Undefined error</string>
    <string name="empty_server_response_on_success">Response from server is empty</string>
    <string name="button_search_title">Input word for translate below</string>
    <string name="button_translate">Translate</string>
    <string name="search_hint">New word</string>
    <string name="delete_description">X</string>
</resources>
