<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimaryDark"
            android:paddingHorizontal="@dimen/margin_xx_medium"
            android:paddingBottom="@dimen/margin_small">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_white"
                style="@style/HeaderTextStyle"
                android:textAlignment="center"
                android:text="@string/app_name"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/logo_icon"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <FrameLayout
            android:id="@+id/success_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/main_activity_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/search_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_medium"
                android:src="@drawable/ic_search"
                />
        </FrameLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <FrameLayout
        android:id="@+id/loading_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        >

        <ProgressBar
            android:id="@+id/progress_bar_horizontal"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />

        <ProgressBar
            android:id="@+id/progress_bar_round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/error_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/error_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_textview_stub"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reload_button"
            />
    </LinearLayout>
</FrameLayout>
